[gd_scene load_steps=12 format=3 uid="uid://cglw1kt2cgkck"]

[ext_resource type="Script" uid="uid://ddvc6jh65fryc" path="res://Scripts/Item/interaction_bathtub.gd" id="1_dy6py"]
[ext_resource type="Texture2D" uid="uid://jw1pr85nv3d0" path="res://Assets/Sprites/FirstPerson/first_person.png" id="3_6451m"]
[ext_resource type="FontFile" uid="uid://6ik02l1yg1ii" path="res://Assets/Fonts/Fusion Pixel 10px Monospaced/fusion-pixel-10px-monospaced-zh_hans.otf" id="4_3mv4l"]
[ext_resource type="Texture2D" uid="uid://ow75lh8i7xjo" path="res://Assets/Textures/inventory-box.png" id="5_yp4ai"]
[ext_resource type="PackedScene" uid="uid://c4r62wrijl4uu" path="res://Scenes/Item/highlight_item.tscn" id="6_o32u0"]
[ext_resource type="AudioStream" uid="uid://j2c1oqo3420" path="res://Assets/Audio/SFX back_Esc.mp3" id="7_6j3tf"]
[ext_resource type="AudioStream" uid="uid://cafr3duw7wf27" path="res://Assets/Audio/SFX Drag item or ambil item.mp3" id="8_mgqmq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vv4en"]
bg_color = Color(0, 0, 0, 0.7019608)

[sub_resource type="AtlasTexture" id="AtlasTexture_5et6o"]
atlas = ExtResource("3_6451m")
region = Rect2(10, 14, 327, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxr4i"]
atlas = ExtResource("3_6451m")
region = Rect2(761, 25, 238, 241)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_10dsq"]
texture = ExtResource("5_yp4ai")
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
region_rect = Rect2(16, 16, 32, 32)

[node name="InteractionBathtub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dy6py")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vv4en")

[node name="TextureBathroom" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_5et6o")
stretch_mode = 5

[node name="TextureCurtain" type="TextureRect" parent="PanelContainer/TextureBathroom"]
layout_mode = 0
offset_left = 441.99994
offset_top = 3.0000002
offset_right = 680.0
offset_bottom = 244.0
scale = Vector2(2.8, 2.8)
texture = SubResource("AtlasTexture_wxr4i")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Button" type="Button" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_3mv4l")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_10dsq")
text = "Close"

[node name="ClickableArea" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 471.0
offset_top = 8.0
offset_right = 1751.0
offset_bottom = 728.0
scale = Vector2(0.4937641, 0.9148994)
mouse_default_cursor_shape = 2

[node name="HighlightItem" parent="." instance=ExtResource("6_o32u0")]
process_mode = 3
visible = false
layout_mode = 1

[node name="PutItemSFX" type="AudioStreamPlayer2D" parent="HighlightItem"]
unique_name_in_owner = true
stream = ExtResource("7_6j3tf")

[node name="PickupSFX" type="AudioStreamPlayer2D" parent="HighlightItem"]
unique_name_in_owner = true
stream = ExtResource("8_mgqmq")

[connection signal="pressed" from="PanelContainer/MarginContainer/Button" to="." method="_on_button_close_pressed"]
[connection signal="pressed" from="ClickableArea" to="." method="_on_clickable_area_pressed"]
